# qrfinder

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/yjy/qrfinder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android_Define.h  cv_helper.cpp  native-lib.cpp
app/src/main/java/com/yjy/qrfinder/: MainActivity.java  QRFinder.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yjy/qrfinder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
qrfind/: CMakeLists.txt  build.gradle
qrfind/src/androidTest/java/com/yjy/qrfind/: ExampleInstrumentedTest.java
qrfind/src/main/: AndroidManifest.xml
qrfind/src/main/cpp/: cv_helper.cpp  cv_helper.h  native-lib.cpp
qrfind/src/main/cpp/include/opencv2/: face.hpp  surface_matching.hpp  ximgproc.hpp  xphoto.hpp
qrfind/src/main/cpp/include/opencv2/core/cuda/: transform.hpp  vec_distance.hpp
qrfind/src/main/cpp/include/opencv2/core/opencl/runtime/: opencl_core_wrappers.hpp  opencl_gl_wrappers.hpp
qrfind/src/main/java/com/yjy/qrfind/: QRFinder.java
qrfind/src/main/res/values/: strings.xml
qrfind/src/test/java/com/yjy/qrfind/: ExampleUnitTest.java
